--- a/src/StyleSheets/Componentes/Combobox_Roles.css
+++ b/src/StyleSheets/Componentes/Combobox_Roles.css
@@ -1,10 +1,12 @@
-.Combobox{
 
-    background: transparent;
-    border: none;
-    font-size: 14px;
-    height: 30px;
-    padding: 5px;
-    width: 250px;
 
+.Select{ 
+    
+    
+    text-align: center;
+    box-shadow: none;
+    font-family: roboto;
+    width: 300px;
+    
+    
 }
