--- a/src/StyleSheets/Usuario/Usuario_Menu_General.css
+++ b/src/StyleSheets/Usuario/Usuario_Menu_General.css
@@ -193,10 +193,8 @@ html, body {
 .BotonCompra{
     grid-column: 1/4;
     justify-self: center;
-    margin-top: 50px;
+    margin-top: 75px;
 }
-
-
 
 .DResumen{
 
@@ -204,5 +202,91 @@ html, body {
     justify-self: center;
     margin-top: 40px;
 }
+
+.ppp{
+    font-weight: bold;
+    color: rgb(73, 69, 65);
+    font-family: roboto;
+    font-size: 25px;
+
+    grid-column: 3/4;
+    justify-self: start;
+    margin-top: 75px;
+    margin-right: 50px;
+}
+
+
+
+#FormPago{
+    
+    padding: 25px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto auto;
+    
+    
+}
+
+#FormPago div input{
+    text-align: center;
+    font-family: roboto;
+    font-size: 25px;
+    color: rgb(129, 122, 114);
+    border: 2px solid rgb(243, 112, 33);
+    line-height: 35px;
+}
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+#CardNumber{ 
+    margin: 15px;
+    grid-column: 1/4;
+    justify-self: center;
+}
+#CardNumber input{ 
+    width: 300px;
+}
+#CardName{   
+    margin: 15px;
+    grid-column: 1/4;
+    justify-self: center;
+}
+#CardName input{ 
+    width: 300px;
+}
+
+#CardMonth{ 
+    margin: 15px;
+    grid-column: 1/2;
+    justify-self: end;
+}
+#CardMonth input{ 
+    width: 100px;
+}
+#CardYear{   
+    margin: 15px;
+    grid-column: 2/3;
+    justify-self: center;
+}
+#CardYear input{ 
+    width: 100px;
+}
+#CardCVV{  
+    margin: 15px;
+    grid-column: 3/4;
+    justify-self: start;
+}
+#CardCVV input{ 
+    width: 100px;
+}
+#CardBoton{
+    margin-top: 40px;
+    margin-left: 35px;
+    grid-column: 1/4;
+    justify-self: center;
+}
+
 
 
