Se implementaron interfaces de jinete y modificaciones en combobox como en algunas interfaces del usuario

--- a/src/StyleSheets/Componentes/Combobox_Roles.css
+++ b/src/StyleSheets/Componentes/Combobox_Roles.css
@@ -1,12 +1,18 @@
 
 
-.Select{ 
+#FormRol{ 
     
-    
+    display: flex;
     text-align: center;
     box-shadow: none;
     font-family: roboto;
-    width: 300px;
-    
-    
+    width: 500px;
+    margin-left: 90px;
+    margin-bottom: 100px;
+}
+
+#SelectRol {
+
+    background-color: aqua;
+    width: 500px;
 }
