--- a/src/StyleSheets/Componentes/Nav_Usuario.css
+++ b/src/StyleSheets/Componentes/Nav_Usuario.css
@@ -1,28 +1,22 @@
 .NavUsuario{
-
     display: grid;
-    
     grid-template-columns: auto auto auto auto auto auto auto auto; 
-
     background-color: rgb(129, 122, 114);
-    
     text-align: center;
     font-size: 22px;
-
     margin: 0px auto 2px auto;
     width: 100%;
     line-height: 65px;
-    
-    
-    justify-content: center;
-     
+    justify-content: center;   
 }
 
-nav a{
+nav div{
     color: white;
     text-decoration: none; 
     font-family: roboto;
     font-weight: bold;
+    padding: 0px 25px;
+    cursor: pointer;
 }
 
 nav div:hover{
