--- a/src/StyleSheets/Usuario/Usuario_Menu_Principal.css
+++ b/src/StyleSheets/Usuario/Usuario_Menu_Principal.css
@@ -50,3 +50,64 @@ html, body {
     grid-column: 2/3;
 }
 
+
+#Tprincipal{
+    grid-column: 1/3;
+    width: 1200px;
+    justify-self: center;
+    margin: 35px;
+}
+
+#Tpremio{
+    grid-column: 1/2;
+    width: 250px;
+    justify-self: center;
+    margin: 35px;
+}
+
+#Tfavoritos{
+    grid-column: 2/3;
+    width: 250px;
+    justify-self: center;
+    margin: 35px;
+}
+
+#Trecord{
+    grid-column: 1/3;
+    width: 500px;
+    justify-self: center;
+    margin: 35px;
+}
+
+#TituloRecord{
+    font-family: roboto;
+    font-size: 25px;
+    color: rgb(73, 69, 65);
+}
+
+#Tejemplares{
+    grid-column: 1/3;
+    width: 1200px;
+    justify-self: center;
+    margin: 35px;
+}
+
+#BotonResultados{
+    grid-column: 1/3;
+    justify-self: center;
+    margin-top: 50px;
+}
+
+#Ttiempo{
+    grid-column: 1/3;
+    width: 600px;
+    justify-self: center;
+    margin: 35px;
+}
+
+#Tresultado{
+    grid-column: 1/3;
+    width: 1000px;
+    justify-self: center;
+    margin: 35px;
+}
