Se terminaron las interfaces de los jinetes, se comenzaron las interfaces de los entrenadores

--- a/src/StyleSheets/Entrenador/Entrenador_Menu_Principal.css
+++ b/src/StyleSheets/Entrenador/Entrenador_Menu_Principal.css
@@ -153,3 +153,12 @@ input[type="date"]{
     justify-self: center;
     margin-top: 50px;
 }
+
+#EntrenadorListaEjemplares{
+    margin: 60px;
+}
+
+#EntrenadorListaEjemplaresCarrera{
+    margin: 50px;
+    grid-column: 1/3;
+}
