Se implementaron otras interfaces de los entrenadores

--- a/src/StyleSheets/Usuario/Usuario_Menu_Principal.css
+++ b/src/StyleSheets/Usuario/Usuario_Menu_Principal.css
@@ -44,6 +44,11 @@ html, body {
     justify-content: center;
 }
 
+#UsuarioCarreraLista{
+    grid-column: 1/4;
+    justify-self: center;
+}
+
 .DivBotonApuesta{
     justify-self: start;
     padding-left: 40px;
