--- a/src/StyleSheets/Entrenador/Entrenador_Menu_Principal.css
+++ b/src/StyleSheets/Entrenador/Entrenador_Menu_Principal.css
@@ -148,10 +148,11 @@ input[type="date"]{
     margin: 35px;
 }
 
-#ComboboxSolicitudJinete{
+#ComboboxSolicitudEntrenador{
     grid-column: 1/3;
     justify-self: center;
     margin-top: 50px;
+    margin-right: 40px;
 }
 
 #EntrenadorListaEjemplares{
