--- a/src/StyleSheets/Admin/Admin_Menu_Principal.css
+++ b/src/StyleSheets/Admin/Admin_Menu_Principal.css
@@ -186,3 +186,9 @@ input{
     grid-column: 1/3;
     color: rgb(255, 136, 0);
 }
+
+.ResInscritos{
+    word-wrap: break-word;
+    overflow: auto;
+
+}
